--- a/pom.xml
+++ b/pom.xml
@@ -80,21 +80,6 @@
 			<version>2.9.1</version>
 		</dependency>
 
-
-		<!-- swagger 接口文档 -->
-<!--		<dependency>-->
-<!--			<groupId>io.springfox</groupId>-->
-<!--			<artifactId>springfox-swagger2</artifactId>-->
-<!--			<version>2.9.2</version>-->
-<!--		</dependency>-->
-
-		<!-- swagger UI -->
-<!--		<dependency>-->
-<!--			<groupId>io.springfox</groupId>-->
-<!--			<artifactId>springfox-swagger-ui</artifactId>-->
-<!--			<version>2.9.2</version>-->
-<!--		</dependency>-->
-
 		<!-- knife4j 接口文档 -->
 		<dependency>
 			<groupId>com.github.xiaoymin</groupId>
@@ -123,6 +108,13 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 			<version>2.6.4</version>
 		</dependency>
+
+		<!-- lecttuce 缓存连接池-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+		</dependency>
+
 
 		<!-- session-data-redis -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session-data-redis -->
@@ -157,10 +149,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>14</source>
-					<target>14</target>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
