--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,12 @@ spring:
     port: 6379
     host: localhost
     database: 0
+    lettuce:
+      pool:
+        max-active: 20 #最大连接数，负值表示没有限制，默认8
+        max-wait: -1   #最大阻塞等待时间，负值表示没限制，默认-1
+        max-idle: 8    #最大空闲连接，默认8
+        min-idle: 0    #最小空闲连接，默认0
   # session 超时 失效时间 s
   session:
     timeout: 86400
